{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 84,
  "lineage": "25511f47-76d0-292d-91f6-8002f17ad176",
  "resources": [
    {
      "module": "module.network-stack1",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ce8b6429427740f5",
            "domain": "vpc",
            "id": "eipalloc-0ce8b6429427740f5",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-35-172-55-241.compute-1.amazonaws.com",
            "public_ip": "35.172.55.241",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network-stack1",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461692115791:internet-gateway/igw-022c619d6a87aa1a7",
            "id": "igw-022c619d6a87aa1a7",
            "owner_id": "461692115791",
            "vpc_id": "vpc-026ce1d9e586c5a59"
          },
          "dependencies": [
            "module.network-stack1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network-stack1",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ce8b6429427740f5",
            "association_id": "eipassoc-05922badf62a62686",
            "connectivity_type": "public",
            "id": "nat-0003af53ccd5921f8",
            "network_interface_id": "eni-02f208b3293405fe5",
            "private_ip": "10.0.3.239",
            "public_ip": "35.172.55.241",
            "subnet_id": "subnet-02351754f33260966",
            "tags": {
              "Name": "NAT"
            },
            "tags_all": {
              "Name": "NAT"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.network-stack1.aws_eip.nat",
            "module.network-stack1.aws_internet_gateway.main",
            "module.network-stack1.aws_subnet.public_subnet",
            "module.network-stack1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network-stack1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461692115791:route-table/rtb-03703cdc80241b0e0",
            "id": "rtb-03703cdc80241b0e0",
            "owner_id": "461692115791",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0003af53ccd5921f8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-026ce1d9e586c5a59"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.network-stack1.aws_eip.nat",
            "module.network-stack1.aws_internet_gateway.main",
            "module.network-stack1.aws_nat_gateway.nat",
            "module.network-stack1.aws_subnet.public_subnet",
            "module.network-stack1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network-stack1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461692115791:route-table/rtb-0fce015a30680235d",
            "id": "rtb-0fce015a30680235d",
            "owner_id": "461692115791",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-022c619d6a87aa1a7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public"
            },
            "tags_all": {
              "Name": "Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-026ce1d9e586c5a59"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network-stack1.aws_internet_gateway.main",
            "module.network-stack1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network-stack1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b7118d0282f87e4",
            "route_table_id": "rtb-03703cdc80241b0e0",
            "subnet_id": "subnet-043602275884c40ab"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.network-stack1.aws_eip.nat",
            "module.network-stack1.aws_internet_gateway.main",
            "module.network-stack1.aws_nat_gateway.nat",
            "module.network-stack1.aws_route_table.private_rt",
            "module.network-stack1.aws_subnet.private_subnet",
            "module.network-stack1.aws_subnet.public_subnet",
            "module.network-stack1.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b838ff47d420a124",
            "route_table_id": "rtb-03703cdc80241b0e0",
            "subnet_id": "subnet-0d8a1a780aebabd6f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.network-stack1.aws_eip.nat",
            "module.network-stack1.aws_internet_gateway.main",
            "module.network-stack1.aws_nat_gateway.nat",
            "module.network-stack1.aws_route_table.private_rt",
            "module.network-stack1.aws_subnet.private_subnet",
            "module.network-stack1.aws_subnet.public_subnet",
            "module.network-stack1.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01bf21ff265226dee",
            "route_table_id": "rtb-03703cdc80241b0e0",
            "subnet_id": "subnet-072cbc51aa15f2f2c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.network-stack1.aws_eip.nat",
            "module.network-stack1.aws_internet_gateway.main",
            "module.network-stack1.aws_nat_gateway.nat",
            "module.network-stack1.aws_route_table.private_rt",
            "module.network-stack1.aws_subnet.private_subnet",
            "module.network-stack1.aws_subnet.public_subnet",
            "module.network-stack1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network-stack1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078fb4b0347f20050",
            "route_table_id": "rtb-0fce015a30680235d",
            "subnet_id": "subnet-02351754f33260966"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.network-stack1.aws_internet_gateway.main",
            "module.network-stack1.aws_route_table.rt",
            "module.network-stack1.aws_subnet.public_subnet",
            "module.network-stack1.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07735c664805d412c",
            "route_table_id": "rtb-0fce015a30680235d",
            "subnet_id": "subnet-0a3fc36c04d22f31c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.network-stack1.aws_internet_gateway.main",
            "module.network-stack1.aws_route_table.rt",
            "module.network-stack1.aws_subnet.public_subnet",
            "module.network-stack1.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-044f465dd25df5db5",
            "route_table_id": "rtb-0fce015a30680235d",
            "subnet_id": "subnet-0a592a53e68bd4122"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.network-stack1.aws_internet_gateway.main",
            "module.network-stack1.aws_route_table.rt",
            "module.network-stack1.aws_subnet.public_subnet",
            "module.network-stack1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network-stack1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461692115791:subnet/subnet-043602275884c40ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043602275884c40ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "461692115791",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SubnetPriv1",
              "Type": "private"
            },
            "tags_all": {
              "Name": "SubnetPriv1",
              "Type": "private"
            },
            "vpc_id": "vpc-026ce1d9e586c5a59"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.network-stack1.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461692115791:subnet/subnet-0d8a1a780aebabd6f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d8a1a780aebabd6f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "461692115791",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SubnetPriv2",
              "Type": "private"
            },
            "tags_all": {
              "Name": "SubnetPriv2",
              "Type": "private"
            },
            "vpc_id": "vpc-026ce1d9e586c5a59"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.network-stack1.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461692115791:subnet/subnet-072cbc51aa15f2f2c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-072cbc51aa15f2f2c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "461692115791",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SubnetPriv3",
              "Type": "private"
            },
            "tags_all": {
              "Name": "SubnetPriv3",
              "Type": "private"
            },
            "vpc_id": "vpc-026ce1d9e586c5a59"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.network-stack1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network-stack1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461692115791:subnet/subnet-02351754f33260966",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02351754f33260966",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "461692115791",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SubnetPub1",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "SubnetPub1",
              "Type": "Public"
            },
            "vpc_id": "vpc-026ce1d9e586c5a59"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.network-stack1.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461692115791:subnet/subnet-0a3fc36c04d22f31c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a3fc36c04d22f31c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "461692115791",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SubnetPub2",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "SubnetPub2",
              "Type": "Public"
            },
            "vpc_id": "vpc-026ce1d9e586c5a59"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.network-stack1.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461692115791:subnet/subnet-0a592a53e68bd4122",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a592a53e68bd4122",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "461692115791",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SubnetPub3",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "SubnetPub3",
              "Type": "Public"
            },
            "vpc_id": "vpc-026ce1d9e586c5a59"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.network-stack1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network-stack1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461692115791:vpc/vpc-026ce1d9e586c5a59",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-006573de6bc3ef8c4",
            "default_route_table_id": "rtb-0fdb9095aca89f1e8",
            "default_security_group_id": "sg-0f8f49334168715f7",
            "dhcp_options_id": "dopt-0ad6184b685b5b12f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-026ce1d9e586c5a59",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fdb9095aca89f1e8",
            "owner_id": "461692115791",
            "tags": {
              "Demo": "Terraform",
              "Name": "yoMismo"
            },
            "tags_all": {
              "Demo": "Terraform",
              "Name": "yoMismo"
            }
          }
        }
      ]
    },
    {
      "module": "module.network-stack2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0469a62d1de630438",
            "domain": "vpc",
            "id": "eipalloc-0469a62d1de630438",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-193-241-3.compute-1.amazonaws.com",
            "public_ip": "34.193.241.3",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network-stack2",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461692115791:internet-gateway/igw-0a41a819d02bd3412",
            "id": "igw-0a41a819d02bd3412",
            "owner_id": "461692115791",
            "vpc_id": "vpc-0c1830cf78602cd92"
          },
          "dependencies": [
            "module.network-stack2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network-stack2",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0469a62d1de630438",
            "association_id": "eipassoc-034939496c8b4bb26",
            "connectivity_type": "public",
            "id": "nat-093b794592dcdb48b",
            "network_interface_id": "eni-0792fe26c96e63ec2",
            "private_ip": "10.1.3.69",
            "public_ip": "34.193.241.3",
            "subnet_id": "subnet-02a549004ae50e8c7",
            "tags": {
              "Name": "NAT"
            },
            "tags_all": {
              "Name": "NAT"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.network-stack2.aws_eip.nat",
            "module.network-stack2.aws_internet_gateway.main",
            "module.network-stack2.aws_subnet.public_subnet",
            "module.network-stack2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network-stack2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461692115791:route-table/rtb-09311f69945b767a5",
            "id": "rtb-09311f69945b767a5",
            "owner_id": "461692115791",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-093b794592dcdb48b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1830cf78602cd92"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.network-stack2.aws_eip.nat",
            "module.network-stack2.aws_internet_gateway.main",
            "module.network-stack2.aws_nat_gateway.nat",
            "module.network-stack2.aws_subnet.public_subnet",
            "module.network-stack2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network-stack2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461692115791:route-table/rtb-04f09d4969288f98b",
            "id": "rtb-04f09d4969288f98b",
            "owner_id": "461692115791",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a41a819d02bd3412",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public"
            },
            "tags_all": {
              "Name": "Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1830cf78602cd92"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network-stack2.aws_internet_gateway.main",
            "module.network-stack2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network-stack2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a228f4ee74aef5b1",
            "route_table_id": "rtb-09311f69945b767a5",
            "subnet_id": "subnet-0ac5e514c74ba3815"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.network-stack2.aws_eip.nat",
            "module.network-stack2.aws_internet_gateway.main",
            "module.network-stack2.aws_nat_gateway.nat",
            "module.network-stack2.aws_route_table.private_rt",
            "module.network-stack2.aws_subnet.private_subnet",
            "module.network-stack2.aws_subnet.public_subnet",
            "module.network-stack2.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c6f153badeb8990f",
            "route_table_id": "rtb-09311f69945b767a5",
            "subnet_id": "subnet-063e9398129f82ada"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.network-stack2.aws_eip.nat",
            "module.network-stack2.aws_internet_gateway.main",
            "module.network-stack2.aws_nat_gateway.nat",
            "module.network-stack2.aws_route_table.private_rt",
            "module.network-stack2.aws_subnet.private_subnet",
            "module.network-stack2.aws_subnet.public_subnet",
            "module.network-stack2.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062144fbb74d77115",
            "route_table_id": "rtb-09311f69945b767a5",
            "subnet_id": "subnet-0bd78f088313ee052"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.network-stack2.aws_eip.nat",
            "module.network-stack2.aws_internet_gateway.main",
            "module.network-stack2.aws_nat_gateway.nat",
            "module.network-stack2.aws_route_table.private_rt",
            "module.network-stack2.aws_subnet.private_subnet",
            "module.network-stack2.aws_subnet.public_subnet",
            "module.network-stack2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network-stack2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-055ed55a913288adc",
            "route_table_id": "rtb-04f09d4969288f98b",
            "subnet_id": "subnet-02a549004ae50e8c7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.network-stack2.aws_internet_gateway.main",
            "module.network-stack2.aws_route_table.rt",
            "module.network-stack2.aws_subnet.public_subnet",
            "module.network-stack2.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014b6db8f2f584e19",
            "route_table_id": "rtb-04f09d4969288f98b",
            "subnet_id": "subnet-0267620ae97c0aa1f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.network-stack2.aws_internet_gateway.main",
            "module.network-stack2.aws_route_table.rt",
            "module.network-stack2.aws_subnet.public_subnet",
            "module.network-stack2.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035083ca3e5f7ca45",
            "route_table_id": "rtb-04f09d4969288f98b",
            "subnet_id": "subnet-09344599fef99f7fc"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.network-stack2.aws_internet_gateway.main",
            "module.network-stack2.aws_route_table.rt",
            "module.network-stack2.aws_subnet.public_subnet",
            "module.network-stack2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network-stack2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461692115791:subnet/subnet-0ac5e514c74ba3815",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac5e514c74ba3815",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "461692115791",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SubnetPriv1",
              "Type": "private"
            },
            "tags_all": {
              "Name": "SubnetPriv1",
              "Type": "private"
            },
            "vpc_id": "vpc-0c1830cf78602cd92"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.network-stack2.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461692115791:subnet/subnet-063e9398129f82ada",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063e9398129f82ada",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "461692115791",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SubnetPriv2",
              "Type": "private"
            },
            "tags_all": {
              "Name": "SubnetPriv2",
              "Type": "private"
            },
            "vpc_id": "vpc-0c1830cf78602cd92"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.network-stack2.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461692115791:subnet/subnet-0bd78f088313ee052",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd78f088313ee052",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "461692115791",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SubnetPriv3",
              "Type": "private"
            },
            "tags_all": {
              "Name": "SubnetPriv3",
              "Type": "private"
            },
            "vpc_id": "vpc-0c1830cf78602cd92"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.network-stack2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network-stack2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461692115791:subnet/subnet-02a549004ae50e8c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a549004ae50e8c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "461692115791",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SubnetPub1",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "SubnetPub1",
              "Type": "Public"
            },
            "vpc_id": "vpc-0c1830cf78602cd92"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.network-stack2.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461692115791:subnet/subnet-0267620ae97c0aa1f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0267620ae97c0aa1f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "461692115791",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SubnetPub2",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "SubnetPub2",
              "Type": "Public"
            },
            "vpc_id": "vpc-0c1830cf78602cd92"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.network-stack2.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461692115791:subnet/subnet-09344599fef99f7fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.1.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09344599fef99f7fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "461692115791",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SubnetPub3",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "SubnetPub3",
              "Type": "Public"
            },
            "vpc_id": "vpc-0c1830cf78602cd92"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.network-stack2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network-stack2",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461692115791:vpc/vpc-0c1830cf78602cd92",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-001af700ad807ccdd",
            "default_route_table_id": "rtb-06153525093510e97",
            "default_security_group_id": "sg-0234291f76cac37cc",
            "dhcp_options_id": "dopt-0ad6184b685b5b12f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c1830cf78602cd92",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06153525093510e97",
            "owner_id": "461692115791",
            "tags": {
              "Demo": "Terraform",
              "Name": "yoMismo"
            },
            "tags_all": {
              "Demo": "Terraform",
              "Name": "yoMismo"
            }
          }
        }
      ]
    }
  ]
}